noinst_LTLIBRARIES = libld_utility.la

AM_CPPFLAGS = \
	-I$(top_srcdir)/src

libld_utility_la_SOURCES = application.h \
	array2d.h \
	basiclog.h \
	binarrayparser.h \
	configurationparser.h \
	exception.h \
	executionlog.h \
	filebuffer.h \
	functors.h \
	generatereport.h \
	genobplookup.h \
	genolookup.h \
	genotypeparser.h \
	lineparser.h \
	rbtree.h \
	stat.h \
	stringlookup.h \
	strings.h \
	typelookup.h \
	types.h \
	utility.h \
	application.cpp \
	basiclog.cpp \
	binarrayparser.cpp \
	configurationparser.cpp \
	executionlog.cpp \
	filebuffer.cpp \
	genolookup.cpp \
    genobplookup.cpp \
	generatereport.cpp \
	genotypeparser.cpp \
	lineparser.cpp \
	stringlookup.cpp \
	strings.cpp \
	typelookup.cpp \
	types.cpp
	
#	random.h
#	random.cpp
#	casecontrolstatus.h 
#	casecontrolstatus.cpp 
